tests/codegen/fail/input_object/enum/derive_all_variants_ignored.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
enum Object {
    #[graphql(ignore)]
    Field(String),
}

fn main() {}
